--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "npx prisma generate && next dev",
+    "build": "npx prisma generate && next build",
+    "start": "npx prisma generate && next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.16.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
-    "mongoose": "^8.4.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -24,10 +26,12 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
