--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@langchain/community": "^0.0.30",
+    "@langchain/core": "^0.2.11",
+    "@langchain/openai": "^0.2.1",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
+    "ai": "^2.2.36",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "filepond-plugin-file-encode": "^2.1.14",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "zustand": "^4.5.4"
@@ -33,6 +40,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
