--- a/package.json
+++ b/package.json
@@ -16,16 +16,14 @@
     "@langchain/openai": "^0.2.1",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
-    "@next-auth/mongodb-adapter": "^1.1.3",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
     "ai": "^2.2.36",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "filepond-plugin-file-encode": "^2.1.14",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dnd": "^16.0.1",
