--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-filepond": "^7.1.2",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
