--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
     "@langchain/community": "^0.0.30",
     "@langchain/core": "^0.2.11",
     "@langchain/openai": "^0.2.1",
@@ -31,6 +32,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-filepond": "^7.1.2",
+    "react-icons": "^5.2.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "zustand": "^4.5.4"
