--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.1.2",
+    "@hello-pangea/dnd": "^16.6.0",
     "@langchain/community": "^0.0.30",
     "@langchain/core": "^0.2.14",
     "@langchain/openai": "^0.2.1",
@@ -21,6 +22,7 @@
     "ai": "^2.2.36",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "contxt": "^1.3.0",
     "filepond-plugin-file-encode": "^2.1.14",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -29,8 +31,6 @@
     "next": "14.2.4",
     "pdf-parse": "^1.1.1",
     "react": "^18",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-filepond": "^7.1.2",
