--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npx prisma generate && next dev",
-    "build": "npx prisma generate && next build",
-    "start": "npx prisma generate && next start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,7 +18,6 @@
     "@langchain/openai": "^0.2.1",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
-    "@prisma/client": "^5.16.1",
     "ai": "^2.2.36",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -28,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "langchain": "^0.2.8",
     "mongodb": "^5.9.2",
+    "mongoose": "^8.5.1",
     "next": "14.2.4",
     "pdf-parse": "^1.1.1",
     "react": "^18",
