--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "langchain": "^0.2.8",
+    "mailgun.js": "^10.2.1",
     "mongodb": "^5.9.2",
     "mongoose": "^8.5.1",
     "next": "14.2.4",
